force-app/main/default/objects/HAM_Chapter_Lookup__c/HAM_Chapter_Lookup__c.object-meta.xml
<CustomObject>
    <description>Chapter/Region lookup table</description>
    <label>Chapter Lookup</label>
    <nameField>
        <label>Chapter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chapter Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>