force-app/main/default/objects/HAM_Chapter_Lookup__c/fields/HAM_Chapter_Code__c.field-meta.xml
<CustomField>
    <fullName>HAM_Chapter_Code__c</fullName>
    <externalId>true</externalId>
    <label>Chapter Code</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>