force-app/main/default/objects/HAM_Chapter_Lookup__c/fields/HAM_Chapter_Type__c.field-meta.xml
<CustomField>
    <fullName>HAM_Chapter_Type__c</fullName>
    <label>Chapter Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
                <default>true</default>
                <label>Domestic</label>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>