force-app/main/default/objects/HAM_Chapter_Lookup__c/fields/HAM_Comments__c.field-meta.xml
<CustomField>
    <fullName>HAM_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>