force-app/main/default/objects/HAM_Chapter_Lookup__c/fields/HAM_Region__c.field-meta.xml
<CustomField>
    <fullName>HAM_Region__c</fullName>
    <description>Broader region for further Chapter categorization</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eastern Florida</fullName>
            </value>
            <value>
                <fullName>Midwest</fullName>
            </value>
            <value>
                <fullName>Western Florida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>